<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/marginExt"
    android:background="@drawable/ic_launcher_foreground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo01"
        android:background="@drawable/rounded_corner"
        android:padding="@dimen/marginExt"
        android:layout_marginTop="@dimen/marginExt"
        android:layout_marginBottom="@dimen/marginExt"
        android:layout_marginStart="@dimen/marginExt"
        android:layout_marginEnd="@dimen/marginExt"
        android:textSize="@dimen/textSizeExt" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titulo01"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/marginExt"
        android:layout_marginBottom="@dimen/marginExt"
        android:layout_marginStart="@dimen/marginExt"
        android:layout_marginEnd="@dimen/marginExt" />

    <TextView
        android:id="@+id/avisoJuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:text="@string/avisoJuego"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginExt"
        android:layout_marginBottom="@dimen/marginExt"
        android:layout_marginStart="@dimen/marginExt"
        android:layout_marginEnd="@dimen/marginExt" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginExt"
        android:layout_marginBottom="@dimen/marginExt"
        android:layout_marginStart="@dimen/marginExt"
        android:layout_marginEnd="@dimen/marginExt"
        android:layout_alignParentBottom="true"
        android:text="@string/empezarJuego"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btnrounded_corner"
        android:padding="@dimen/marginExt" />

</RelativeLayout>